# rosu-mods

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: check.yml
generate-mods/: README.md
generate-mods/src/: lib.rs  main.rs  model.rs
src/: acronym.rs  error.rs  generated_mods.rs  intermode.rs  intersection.rs  iter.rs  kind.rs  legacy.rs  legacy_mods.rs  lib.rs  macros.rs  mod_manual.rs  mode.rs  mode_as_seed.rs  mods.rs  order.rs  serde.rs  simple.rs  util.rs
tests/: rkyv.rs  serde.rs
