[package]
name = "rosu-mods"
version = "0.3.1"
edition = "2021"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MaxOhn/rosu-mods"
documentation = "https://docs.rs/rosu-mods/"
description = "Library for osu! mods"
keywords = ["osu", "mods", "lazer"]

[features]
default = []
macros = ["paste"]

[dependencies]
paste = { version = "1.0.15", optional = true }
rkyv = { version = "0.8.8", optional = true, default-features = false, features = ["alloc", "bytecheck"] }
serde = { version = "1.0.203", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1.0.118" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
